--- a/app.json
+++ b/app.json
@@ -54,6 +54,15 @@
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
             "required": false
         },
+        "AUTO_DELETE": {
+            "description": "Auto Delete the message send by bot in PM type False if you don't want this feature",
+            "value": "True",
+            "required": true
+        },
+            "DLT_TIME": {
+            "description": "Auto Delete time in seconds, default time is 3 hour (Note:3600s=1 Hour)",
+            "required": false
+        },
         "DATABASE_URI": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
